feat: migrate all pybind_extension, ingroduce single pywrap_library

--- a/tensorflow/c/BUILD
+++ b/tensorflow/c/BUILD
@@ -1128,7 +1128,10 @@ tf_cuda_library(
     name = "python_api",
     srcs = ["python_api.cc"],
     hdrs = ["python_api.h"],
-    visibility = ["//tensorflow/python:__pkg__"],
+    visibility = [
+        "//tensorflow/python:__pkg__",
+        "//tensorflow:internal",
+    ],
     deps = [
         ":c_api",
         ":c_api_internal",
