--- a/tensorflow/python/framework/BUILD
+++ b/tensorflow/python/framework/BUILD
@@ -2,6 +2,7 @@
 
 load("//tensorflow:pytype.default.bzl", "pytype_strict_library")
 load("//tensorflow:strict.default.bzl", "py_strict_library", "py_strict_test")
+load("//rules_pywrap:pywrap.bzl", "pybind_extension", "pywrap_library")
 
 # Placeholder: load py_proto_library
 load(
@@ -128,11 +129,10 @@ tf_cc_test(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_python_op_gen",
     srcs = ["python_op_gen_wrapper.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_pywrap_python_op_gen.pyi",
     ],
     deps = [
@@ -140,7 +140,6 @@ tf_python_pybind_extension(
         "//tensorflow/python/lib/core:pybind11_absl",
         "//tensorflow/python/lib/core:pybind11_lib",
         "//third_party/python_runtime:headers",
-        "@pybind11",
     ],
 )
 
@@ -382,11 +381,10 @@ py_strict_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_dtypes",
     srcs = ["dtypes.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_dtypes.pyi",
     ],
     visibility = visibility + ["//third_party/py/tensorfn:__subpackages__"],
@@ -395,7 +393,6 @@ tf_python_pybind_extension(
         "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:protos_all_cc",
         "@eigen_archive//:eigen3",
-        "@pybind11",
     ],
 )
 
@@ -646,15 +643,14 @@ py_strict_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_op_def_library_pybind",
     srcs = ["op_def_library_pybind.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_op_def_library_pybind.pyi",
     ],
     deps = [
-        ":op_def_util_headers",
+        ":op_def_util_cc",
         "//tensorflow/core:framework",
         "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib_headers_for_pybind",
@@ -667,7 +663,6 @@ tf_python_pybind_extension(
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/strings",
-        "@pybind11",
     ],
 )
 
@@ -682,11 +677,10 @@ pytype_strict_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_op_def_registry",
     srcs = ["op_def_registry.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_op_def_registry.pyi",
     ],
     deps = [
@@ -694,7 +688,6 @@ tf_python_pybind_extension(
         "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:protos_all_cc",
         "//tensorflow/python/lib/core:pybind11_status",
-        "@pybind11",
     ],
 )
 
@@ -722,17 +715,15 @@ cc_library(
 )
 
 # Pybind extension used by py_context_manager_test.
-tf_python_pybind_extension(
+pybind_extension(
     name = "_py_context_manager",
     srcs = ["py_context_manager_pybind.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_py_context_manager.pyi",
     ],
     deps = [
         ":py_context_manager",
         "//third_party/python_runtime:headers",
-        "@pybind11",
     ],
 )
 
@@ -771,21 +762,19 @@ cc_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_op_def_util",
     srcs = ["op_def_util_pybind.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_op_def_util.pyi",
     ],
     deps = [
-        ":op_def_util_headers",
+        ":op_def_util",
         "//tensorflow/core:lib_headers_for_pybind",
         "//tensorflow/core:protos_all_cc",
         "//tensorflow/python/lib/core:pybind11_lib",
         "//tensorflow/python/lib/core:safe_pyobject_ptr",
         "//third_party/python_runtime:headers",
-        "@pybind11",
     ],
 )
 
@@ -830,10 +819,10 @@ cc_library(
 )
 
 # Note: this target is only used by python_api_parameter_converter_test.
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_python_api_parameter_converter",
-    srcs = ["python_api_parameter_converter_wrapper.cc"],
-    hdrs = [
+    srcs = [
+        "python_api_parameter_converter_wrapper.cc",
         "op_def_util.h",
         "python_api_info.h",
         "python_api_parameter_converter.h",
@@ -851,8 +840,7 @@ tf_python_pybind_extension(
         "@local_tsl//tsl/distributed_runtime/coordination:pywrap_required_hdrs",
         "@local_tsl//tsl/python/lib/core:numpy_hdr",
     ],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_pywrap_python_api_parameter_converter.pyi",
     ],
     deps = [
@@ -871,7 +859,6 @@ tf_python_pybind_extension(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/types:optional",
         "@com_google_absl//absl/types:span",
-        "@pybind11",
     ] + if_static(
         extra_deps = [
             "//tensorflow/core/protobuf:eager_service_proto_cc",
@@ -931,7 +918,7 @@ cc_library(
 )
 
 # Note: this target is only used by python_api_info_test.
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_python_api_info",
     srcs = ["python_api_info_wrapper.cc"],
     hdrs = [
@@ -951,8 +938,7 @@ tf_python_pybind_extension(
         "@local_tsl//tsl/distributed_runtime/coordination:pywrap_required_hdrs",
         "@local_tsl//tsl/python/lib/core:numpy_hdr",
     ],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_pywrap_python_api_info.pyi",
     ],
     deps = [
@@ -971,7 +957,6 @@ tf_python_pybind_extension(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/types:optional",
         "@com_google_absl//absl/types:span",
-        "@pybind11",
     ] + if_static(
         extra_deps = [
             "@local_tsl//tsl/protobuf:coordination_service_proto_cc",
@@ -1022,22 +1007,21 @@ cc_library(
     alwayslink = 1,
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_python_api_dispatcher",
-    srcs = ["python_api_dispatcher_wrapper.cc"],
-    hdrs = [
+    srcs = [
+        "python_api_dispatcher_wrapper.cc",
         "python_api_dispatcher.h",
         "//tensorflow/python/lib/core:safe_pyobject_ptr_required_hdrs",
     ],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_pywrap_python_api_dispatcher.pyi",
     ],
     deps = [
         "//tensorflow/python/util:function_parameter_canonicalizer_hdrs",
+        ":python_api_dispatcher",
         "//third_party/python_runtime:headers",  # buildcleaner: keep
         "@com_google_absl//absl/container:flat_hash_map",
-        "@pybind11",
     ],
 )
 
@@ -1076,10 +1060,10 @@ cc_library(
 )
 
 # Note: this target is only used by python_tensor_converter_test.
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_python_tensor_converter",
-    srcs = ["python_tensor_converter_wrapper.cc"],
-    hdrs = [
+    srcs = [
+        "python_tensor_converter_wrapper.cc",
         "python_tensor_converter.h",
         "//tensorflow/c:headers",
         "//tensorflow/c/eager:pywrap_required_hdrs",
@@ -1094,8 +1078,7 @@ tf_python_pybind_extension(
         "@local_tsl//tsl/distributed_runtime/coordination:pywrap_required_hdrs",
         "@local_tsl//tsl/python/lib/core:numpy_hdr",
     ],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_pywrap_python_tensor_converter.pyi",
     ],
     deps = [
@@ -1114,7 +1097,6 @@ tf_python_pybind_extension(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/types:optional",
         "@com_google_absl//absl/types:span",
-        "@pybind11",
     ] + if_static(
         extra_deps = [
             "@local_tsl//tsl/protobuf:coordination_service_proto_cc",
@@ -2233,15 +2215,13 @@ py_strict_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_python_memory_checker_helper",
     srcs = ["python_memory_checker_helper.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_python_memory_checker_helper.pyi",
     ],
     deps = [
-        "@pybind11",
     ],
 )
 
@@ -3019,15 +2999,13 @@ tf_py_strict_test(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_memory_checker_test_helper",
     srcs = ["memory_checker_test_helper.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_memory_checker_test_helper.pyi",
     ],
     deps = [
-        "@pybind11",
     ],
 )
 
@@ -3094,16 +3072,14 @@ tf_proto_library(
     visibility = ["//tensorflow:internal"],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_errors_test_helper",
     srcs = ["errors_test_helper.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_errors_test_helper.pyi",
     ],
     deps = [
         "//tensorflow/python/lib/core:pybind11_status",
-        "@pybind11",
     ],
 )
 
@@ -3207,11 +3183,10 @@ cuda_py_benchmark_test(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_proto_comparators",
     srcs = ["proto_comparators.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_proto_comparators.pyi",
     ],
     deps = [
@@ -3221,7 +3196,6 @@ tf_python_pybind_extension(
         "//tensorflow/core/platform:protobuf",
         "//tensorflow/python/lib/core:pybind11_status",
         "//third_party/python_runtime:headers",  # buildcleaner: keep
-        "@pybind11",
     ],
 )
 
@@ -3270,17 +3244,15 @@ py_strict_test(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_test_metrics_util",
     srcs = ["test_metrics_util.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "_test_metrics_util.pyi",
     ],
     deps = [
         "//tensorflow/core:framework",
         "//third_party/python_runtime:headers",
-        "@pybind11",
     ],
 )
 
