--- a/tensorflow/python/tpu/BUILD
+++ b/tensorflow/python/tpu/BUILD
@@ -7,6 +7,7 @@ load("//tensorflow:tensorflow.default.bzl", "tf_py_strict_test", "tf_python_pybi
 load("//tensorflow/core/platform:build_config.bzl", "tf_proto_library")
 load("//tensorflow/python/tpu:tpu.bzl", "internal_create_sanitizer_settings", "tpu_py_strict_test")
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load("//rules_pywrap:pywrap.bzl", "pybind_extension", "pywrap_library")
 
 # Do not add anymore paths here. You do not need to be in the visibility list
 # to use TPU symbols. They are accessible from tf.contrib.tpu in TF 1.x and
@@ -983,12 +984,11 @@ tf_proto_library(
 # )
 # copybara:uncomment_end
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_tpu_embedding",
     srcs = ["pywrap_tpu_embedding.cc"],
-    enable_stub_generation = True,
-    features = ["-layering_check"],
-    pytype_srcs = [
+#    features = ["-layering_check"],
+    data = [
         "_pywrap_tpu_embedding.pyi",
     ],
     deps = [
@@ -997,7 +997,6 @@ tf_python_pybind_extension(
         "//tensorflow/python/lib/core:pybind11_status",
         "//tensorflow/python/lib/core:pybind11_status_headers",
         "//third_party/python_runtime:headers",  # buildcleaner: keep
-        "@pybind11",
         "@pybind11_abseil//pybind11_abseil:absl_casters",
         "@pybind11_protobuf//pybind11_protobuf:native_proto_caster",
     ],
