--- a/tensorflow/core/tfrt/saved_model/python/BUILD
+++ b/tensorflow/core/tfrt/saved_model/python/BUILD
@@ -1,4 +1,5 @@
 load("//tensorflow:tensorflow.default.bzl", "tf_py_strict_test", "tf_python_pybind_extension")
+load("//rules_pywrap:pywrap.bzl", "pybind_extension", "pywrap_library")
 
 package(
     # copybara:uncomment default_applicable_licenses = ["//tensorflow:license"],
@@ -62,19 +63,16 @@ cc_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "_pywrap_saved_model",
     srcs = ["saved_model_load_and_run_wrapper.cc"],
-    enable_stub_generation = True,
-    module_name = "_pywrap_saved_model",
-    pytype_srcs = [
+    data = [
         "_pywrap_saved_model.pyi",
     ],
     deps = [
         ":saved_model_load_and_run",
         "//tensorflow/core/tfrt/graph_executor:graph_execution_options",
         "//tensorflow/python/lib/core:pybind11_lib",
-        "@pybind11",
         "@pybind11_abseil//pybind11_abseil:status_casters",
     ],
 )
