--- a/tensorflow/python/eager/BUILD
+++ b/tensorflow/python/eager/BUILD
@@ -15,6 +15,7 @@ load(
     "//tensorflow/tools/test:performance.bzl",
     "tf_py_logged_benchmark",
 )
+load("//rules_pywrap:pywrap.bzl", "pybind_extension", "pywrap_library")
 
 package(
     # copybara:uncomment default_applicable_licenses = ["//tensorflow:license"],
@@ -88,12 +89,11 @@ cc_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "pywrap_tensor_test_util",
     testonly = True,
     srcs = ["pywrap_tensor_test_util.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "pywrap_tensor_test_util.pyi",
     ],
     deps = [
@@ -101,7 +101,6 @@ tf_python_pybind_extension(
         "//tensorflow/c:tf_status_helper",
         "//tensorflow/c/eager:c_api_test_util",
         "//tensorflow/python/lib/core:pybind11_lib",
-        "@pybind11",
     ],
 )
 
@@ -234,12 +233,11 @@ py_strict_library(
     ],
 )
 
-tf_python_pybind_extension(
+pybind_extension(
     name = "custom_device_testutil",
     testonly = True,
     srcs = ["custom_device_testutil.cc"],
-    enable_stub_generation = True,
-    pytype_srcs = [
+    data = [
         "custom_device_testutil.pyi",
     ],
     deps = [
@@ -254,7 +252,6 @@ tf_python_pybind_extension(
         "//tensorflow/python/lib/core:safe_pyobject_ptr",
         "//tensorflow/python/util:cpp_python_util",
         "//third_party/python_runtime:headers",
-        "@pybind11",
     ],
 )
 
